{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 9,
  "lineage": "d55a3317-48b8-75f6-4184-f75d8cf0b52d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:412307050439:security-group/sg-040f72ad9e269ada9",
            "description": "Allow TLS inbound traffic ",
            "egress": [],
            "id": "sg-040f72ad9e269ada9",
            "ingress": [],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "412307050439",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07091056f205be114"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:412307050439:security-group-rule/sgr-047bbb8f248ae779f",
            "cidr_ipv4": "100.10.198.11/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-047bbb8f248ae779f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-040f72ad9e269ada9",
            "security_group_rule_id": "sgr-047bbb8f248ae779f",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    }
  ]
}